# Projekt-NPG

./: .gitignore  README.md
Backlog/: Gra w formie 2D.txt  Gra w formie 3D.txt  Graficzny interfejs.txt  Menu glowne.txt  Mozliwosc gry online.txt  Punktacja graczy.txt  Wyświetlanie koloru planszy.txt  Wyświetlanie koloru węża.txt
Scrum Masterzy/: Filip Dymczyk.txt  Grucel Konrad.txt  Klaudiusz Grobelski.txt  Krzysztof Furtak.txt  Łukasz Filo.txt
snake_code/: CMakeLists.txt  main.cpp
snake_code/include/: food.hpp  fruit.hpp  game.hpp  menu.hpp  snake.hpp  universal.hpp
snake_code/src/: food.cpp  fruit.cpp  game.cpp  menu.cpp  menu_map.cpp  snake.cpp  universal.cpp
sprawozdania/: sprawozdanie1.txt  sprawozdanie2.txt  sprawozdanie3.txt  sprawozdanie4.txt  sprawozdanie5.txt
